<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:textColor="#000000"
                android:gravity="center"
                android:text="Name"/>

            <TextView
                android:id="@+id/label_enrollment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="#000000"
                android:gravity="center"
                android:text="Enrollment Info"/>

            <Spinner
                android:id="@+id/subject_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="#000000"
                android:gravity="center"
                android:text="@string/gui_label_bimester_1"/>

            <TextView
                android:id="@+id/label_b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:gravity="center"
                android:text="@string/gui_data_placeholder"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="#000000"
                android:gravity="center"
                android:text="@string/gui_label_bimester_2"/>

            <TextView
                android:id="@+id/label_b2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:gravity="center"
                android:text="@string/gui_data_placeholder"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="#000000"
                android:gravity="center"
                android:text="@string/gui_label_bimester_3"/>

            <TextView
                android:id="@+id/label_b3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:gravity="center"
                android:text="@string/gui_data_placeholder"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="#000000"
                android:gravity="center"
                android:text="@string/gui_label_bimester_4"/>

            <TextView
                android:id="@+id/label_b4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="#000000"
                android:gravity="center"
                android:text="@string/gui_data_placeholder"/>

            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gui_label_logout"
                android:layout_gravity="center" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
